--- a/src/app/components/datatable/datatable.component.html
+++ b/src/app/components/datatable/datatable.component.html
@@ -1,1 +1,28 @@
-<p>datatable works!</p>
+<h1 class="h3 mb-2 text-gray-800">Tables</h1>
+<p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below. For more information about DataTables, please visit the <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>
+
+<!-- DataTales Example -->
+<div class="card shadow mb-4">
+<div class="card-header py-3">
+    <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+</div>
+
+<div class="card-body">
+    <div class="table-responsive d-none d-sm-block">
+        <table class="table table-bordered" cdk-table [dataSource]="dataSource" width="100%" cellspacing="0">
+            <div *ngFor="let col of tableColumns">
+                <ng-container cdkColumnDef="{{col.id}}">
+                    <th cdk-header-cell *cdkHeaderCellDef> {{col.title}} </th>
+                    <td cdk-cell *cdkCellDef="let element">
+                        <span *ngIf="col.key!='options'">{{ element[col.key] }}</span>
+                        <span *ngIf="col.key=='options'">
+                            <button class="btn btn-success mx-2"><i class="fas fa-sign-in-alt"></i></button>
+                        </span>
+                    </td>
+                </ng-container>
+            </div>
+            <tr cdk-header-row *cdkHeaderRowDef="displayedColumns"></tr>
+            <tr cdk-row *cdkRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+</div>
