--- a/src/app/components/common/sidebar/sidebar.component.html
+++ b/src/app/components/common/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar" #accordionSidebar>
+<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion h-100" id="accordionSidebar" #accordionSidebar>
 
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" routerLink="/dashboard">
