--- a/src/app/components/datatable/datatable.component.html
+++ b/src/app/components/datatable/datatable.component.html
@@ -3,26 +3,70 @@
 
 <!-- DataTales Example -->
 <div class="card shadow mb-4">
-<div class="card-header py-3">
-    <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
-</div>
 
-<div class="card-body">
-    <div class="table-responsive d-none d-sm-block">
-        <table class="table table-bordered" cdk-table [dataSource]="dataSource" width="100%" cellspacing="0">
-            <div *ngFor="let col of tableColumns">
-                <ng-container cdkColumnDef="{{col.id}}">
-                    <th cdk-header-cell *cdkHeaderCellDef> {{col.title}} </th>
-                    <td cdk-cell *cdkCellDef="let element">
-                        <span *ngIf="col.key!='options'">{{ element[col.key] }}</span>
-                        <span *ngIf="col.key=='options'">
-                            <button class="btn btn-success mx-2"><i class="fas fa-sign-in-alt"></i></button>
-                        </span>
-                    </td>
-                </ng-container>
-            </div>
-            <tr cdk-header-row *cdkHeaderRowDef="displayedColumns"></tr>
-            <tr cdk-row *cdkRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
     </div>
+
+    <div class="card-body">
+
+        <div class="card-title">
+            <form class="d-none d-sm-inline-block form-inline mr-auto my-2 my-md-0 mw-100 navbar-search">
+                <div class="input-group">
+                <input type="text" class="form-control bg-light border-0 small" placeholder="Filter..." aria-label="Search" aria-describedby="basic-addon2" name="filterValue" [(ngModel)]="filterValue">
+                <div class="input-group-append">
+                    <button class="btn btn-primary" type="button" (click)="applyFilter()">
+                    <i class="fas fa-search fa-sm"></i>
+                    </button>
+                </div>
+                </div>
+            </form>
+            <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search float-right">
+                <div class="input-group">
+                    <label for="pageSize" class="form-control bg-light border-0">Show </label>
+                    <select name="pageSize" id="pageSize" class="form-control bg-light border-0 small" [(ngModel)]="pageSize" (change)="loadData(0,pageSize);currentPage=1">
+                        <option *ngFor="let size of pageSizeOptions" value="{{size}}">{{size}}</option>
+                    </select>
+                </div>
+            </form>
+        </div>
+
+        <div class="d-none d-sm-block">
+            <table mat-table [dataSource]="dataSource" matSort class="w-100 table">
+                <div *ngFor="let col of tableColumns">
+                    <ng-container matColumnDef="{{col.id}}">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="p-2"> {{col.title}} </th>
+                        <td mat-cell *matCellDef="let element" class="p-2">
+                            <span *ngIf="col.key!='options'">{{ element[col.key] }}</span>
+                            <span *ngIf="col.key=='options'">
+                                <button class="btn btn-danger btn-circle btn-sm m-1" (click)="delete(element.id)"><i class="fa fa-trash"></i></button>
+                                <button class="btn btn-primary btn-circle btn-sm m-1" (click)="edit(element.id)"><i class="fa fa-edit"></i></button>
+                            </span>
+                        </td>
+                    </ng-container>
+                </div>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+    </div>
+
+    <div class="card-footer">
+        <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search float-right">
+            <div class="input-group">
+                <label for="pageSize" class="form-control bg-light border-0">Show </label>
+                <select name="pageSize" id="pageSize" class="form-control bg-light border-0 small" [(ngModel)]="pageSize" (change)="loadData(0,pageSize);currentPage=1">
+                    <option *ngFor="let size of pageSizeOptions" value="{{size}}">{{size}}</option>
+                </select>
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination" style="cursor: pointer;">
+                        <li class="page-item"><a class="page-link" (click)="paginationPrev()">Previous</a></li>
+                        <li class="page-item btn btn-circle" *ngFor="let page of pages" [ngClass]="(currentPage == page) ? 'active' : ''"><a class="page-link" (click)="pagination(page)">{{page}}</a></li>
+                        <li class="page-item"><a class="page-link" (click)="paginationNext()">Next</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </form>
+    </div>
+
 </div>
