--- a/src/app/components/datatable/datatable.component.html
+++ b/src/app/components/datatable/datatable.component.html
@@ -29,6 +29,7 @@
                     </select>
                 </div>
             </form>
+            <button class="btn btn-primary mx-2"><i class="fa fa-plus"></i> Agregar Usuario</button>
         </div>
 
         <div class="d-none d-sm-block">
