--- a/src/app/components/datatable/datatable.component.html
+++ b/src/app/components/datatable/datatable.component.html
@@ -50,6 +50,7 @@
         [totalRows]="totalRows"
         [pageSizeOptions]="[10,20,50,100]"
         (loadSize)="loadSize($event)"
+        (loadData)="loadData($event)"
         ></app-paginator>
     </div>
 
