loading Data con filtros unificados

--- a/src/app/components/datatable/datatable.component.html
+++ b/src/app/components/datatable/datatable.component.html
@@ -15,7 +15,7 @@
                 <div class="input-group">
                 <input type="text" class="form-control bg-light border-0 small" placeholder="Filter..." aria-label="Search" aria-describedby="basic-addon2" name="filterValue" [(ngModel)]="filterValue">
                 <div class="input-group-append">
-                    <button class="btn btn-primary" type="button" (click)="applyFilter()">
+                    <button class="btn btn-primary" type="button" (click)="loadData()">
                     <i class="fas fa-search fa-sm"></i>
                     </button>
                 </div>
