--- a/src/app/components/datatable/datatable.component.html
+++ b/src/app/components/datatable/datatable.component.html
@@ -5,7 +5,7 @@
 <div class="card shadow mb-4">
 
     <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">{{tableTitle}}
+        <h6 class="m-0 font-weight-bold text-primary">{{cardTitle}}
             <button class="btn btn-primary mx-2 float-right"><i class="fa fa-plus"></i><span class="d-none d-md-inline"> Agregar Usuario</span></button>
         </h6>
     </div>
