--- a/src/app/components/public/login/login.component.html
+++ b/src/app/components/public/login/login.component.html
@@ -15,7 +15,7 @@
                   <div class="text-center">
                     <h1 class="h4 text-gray-900 mb-4">¡Bienvenido!</h1>
                   </div>
-                  <form class="user">
+                  <form class="user" #loginForm>
                     <div class="form-group">
                       <input type="email" name="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Ingresa Tu Correo..." [(ngModel)]="usuario.email">
                     </div>
