--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -1,1 +1,52 @@
-<p>forms works!</p>
+<h1 class="h3 mb-2 text-gray-800">{{pageTitle}}</h1>
+<p class="mb-4">{{pageDescription}}</p>
+
+<!-- DataTales Example -->
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">{{cardTitle}}
+            <button class="btn btn-primary mx-2 float-right"><i class="fa fa-plus"></i><span class="d-none d-md-inline"> Add Form</span></button>
+        </h6>
+    </div>
+    <div class="card-body">
+        <form class="user row" #Formulario (submit)="submitAction()">
+            <div *ngFor="let campo of myFormFields" class="form-group col-sm-12 col-md-6">
+                <label for="{{campo.name}}" class="form-control-label  mx-2">{{campo.placeholder}}:</label>
+                <span *ngIf="campo.tag=='input'">
+                    <span *ngIf="campo.type=='text' || campo.type=='email' || campo.type=='password' || campo.type=='number' || campo.type=='date'">
+                        <input type="{{campo.type}}" class="form-control form-control-user" name="{{campo.name}}" id="{{campo.name}}" placeholder="{{campo.placeholder}}" required="{{campo.required}}"> 
+                    </span>
+                    <span *ngIf="campo.type=='radio'">
+                        <label *ngFor="let o of campo.options" style="cursor: pointer;">
+                            <input type="radio" name="{{campo.name}}" value="{{o.value}}" class="d-inline mx-2" required="{{campo.required}}">{{o.text}}
+                        </label>
+                    </span>
+                    <span *ngIf="campo.type=='checkbox'">
+                        <span *ngFor="let o of campo.options" >
+                            <input type="checkbox" name="{{o.value}}" id="{{o.value}}" value="{{o.value}}" class="custom-control-input" required="{{campo.required}}">
+                            <label for="{{o.value}}" class="custom-control-label d-inline-block mx-4">{{o.text}}</label>
+                        </span>
+                    </span>
+                    <span *ngIf="campo.type=='file'">
+                        <input type="file" name="{{campo.name}}" id="{{campo.name}}" class="d-none" required="{{campo.required}}">
+                        <label for="{{campo.name}}" class="btn btn-primary btn-icon-split">
+                            <span class="icon text-white-50">
+                                <i class="fas fa-upload"></i>
+                            </span>
+                            <span class="text">{{campo.placeholder}}</span>
+                        </label>
+                    </span>
+                </span>
+                <span *ngIf="campo.tag=='select'">
+                    <select name="{{campo.name}}" id="{{campo.name}}" class="form-control d-md-inline" required="{{campo.required}}">
+                        <option *ngFor="let o of campo.options" value="{{o.value}}">{{o.text}}</option>
+                    </select>
+                </span>
+                <span *ngIf="campo.tag=='textarea'">
+                    <textarea name="{{campo.name}}" id="{{campo.name}}" cols="30" rows="5" class="form-control" placeholder="{{campo.placeholder}}" required="{{campo.required}}"></textarea>
+                </span>
+            </div>
+            <button type="submit" class="btn btn-success form-control">Enviar Datos</button>
+        </form>
+    </div>
+</div>
