--- a/src/app/components/datatable/datatable.component.html
+++ b/src/app/components/datatable/datatable.component.html
@@ -18,21 +18,21 @@
                 <div class="input-group">
                 <input type="text" class="form-control bg-light border-0 small" placeholder="Filter..." aria-label="Search" aria-describedby="basic-addon2" name="filterValue" [(ngModel)]="filterValue">
                 <div class="input-group-append">
-                    <button class="btn btn-primary" type="submit" (click)="loadData()">
-                    <i class="fas fa-search fa-sm"></i>
+                    <button class="btn btn-primary" type="submit">
+                    <i class="fas fa-search fa-sm"></i> Search
                     </button>
                 </div>
                 </div>
             </form>            
-            
+            <app-filter-columns [columns]="tableColumns" ></app-filter-columns>
         </div>
 
-        <div class="d-none d-sm-block">
+        <div class="d-none d-sm-block" style="max-height: 500px; overflow-y: scroll;">
             <table mat-table [dataSource]="dataSource" matSort class="w-100 table" (matSortChange)="sortData($event)">
                 <div *ngFor="let col of tableColumns">
                     <ng-container matColumnDef="{{col.id}}">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text text-primary p-2"><h6>{{col.title}}</h6></th>
-                        <td mat-cell *matCellDef="let element" class="p-2">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text text-primary p-2" [hidden]="!col.visible"><h6>{{col.title}}</h6></th>
+                        <td mat-cell *matCellDef="let element" class="p-2" [hidden]="!col.visible">
                             <span *ngIf="col.key!='options'">{{ element[col.key] }}</span>
                             <span *ngIf="col.key=='options'">
                                 <button class="btn btn-danger btn-circle btn-sm m-1" (click)="delete(element.id)"><i class="fa fa-trash"></i></button>
