--- a/src/app/components/common/sidebar/sidebar.component.html
+++ b/src/app/components/common/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" routerLink="/dashboard">
       <div class="sidebar-brand-icon rotate-n-15">
-        <i class="fa fa-shield"></i>
+        <i class="fab fa-angular"></i>
       </div>
       <div class="sidebar-brand-text mx-3">{{webTitle}} <sup>{{webTitleSup}}</sup></div>
     </a>
