--- a/src/app/components/datatable/filter-columns/filter-columns.component.html
+++ b/src/app/components/datatable/filter-columns/filter-columns.component.html
@@ -1,4 +1,9 @@
-<button class="btn btn-small btn-primary mx-2" (click)="open(filters)"><i class="fa fa-filter"></i> Show/Hide</button>
+<button class="btn btn-primary btn-icon-split btn-sm d-inline mx-2" (click)="open(filters)">
+  <span class="icon text-white-50">
+    <i class="fas fa-filter"></i>
+  </span>
+  <span class="text"> Show/Hide</span>
+</button>
 <ng-template let-modal #filters>
     <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Choose The Columns</h5>
@@ -15,5 +20,6 @@
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" type="button" (click)="close()">Cerrar</button>
+        <button class="btn btn-primary" type="button" (click)="filtrar()">filtrar</button>
       </div>
 </ng-template>
