Charts working initial state

--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="card-body">
         <div class="chart-area">
-          <canvas id="myAreaChart" #myAreaChart></canvas>
+          <canvas id="myAreaChart"></canvas>
         </div>
         <hr>
         Styling for the area chart can be found in the <code>/js/demo/chart-area-demo.js</code> file.
