--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -13,9 +13,10 @@
         <h6 class="m-0 font-weight-bold text-primary">Area Chart</h6>
       </div>
       <div class="card-body">
-        <div class="chart-area">
-          <canvas id="myAreaChart"></canvas>
-        </div>
+        <app-area-chart
+        [data]="data"
+        [labels]="labels"
+        ></app-area-chart>
         <hr>
         Styling for the area chart can be found in the <code>/js/demo/chart-area-demo.js</code> file.
       </div>
@@ -26,10 +27,11 @@
       <div class="card-header py-3">
         <h6 class="m-0 font-weight-bold text-primary">Bar Chart</h6>
       </div>
-      <div class="card-body">
-        <div class="chart-bar">
-          <canvas id="myBarChart"></canvas>
-        </div>
+      <div class="card-body">        
+        <app-bar-chart
+        [data]="data"
+        [labels]="labels"
+        ></app-bar-chart>
         <hr>
         Styling for the bar chart can be found in the <code>/js/demo/chart-bar-demo.js</code> file.
       </div>
@@ -46,9 +48,10 @@
       </div>
       <!-- Card Body -->
       <div class="card-body">
-        <div class="chart-pie pt-4">
-          <canvas id="myPieChart"></canvas>
-        </div>
+        <app-pie-chart
+        [data]="data"
+        [labels]="labels"
+        ></app-pie-chart>
         <hr>
         Styling for the donut chart can be found in the <code>/js/demo/chart-pie-demo.js</code> file.
       </div>
