--- a/src/app/components/datatable/datatable.component.html
+++ b/src/app/components/datatable/datatable.component.html
@@ -34,7 +34,8 @@
                     <ng-container matColumnDef="{{col.id}}">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="text text-primary p-2" [hidden]="!col.visible"><h6>{{col.title}}</h6></th>
                         <td mat-cell *matCellDef="let element" class="p-2" [hidden]="!col.visible">
-                            <span *ngIf="col.key!='options'">{{ element[col.key] }}</span>
+                            <span *ngIf="['options','createdAt','updatedAt','deletedAt'].indexOf(col.key) == -1">{{ element[col.key] }}</span>
+                            <span *ngIf="['options','createdAt','updatedAt','deletedAt'].indexOf(col.key) > -1">{{ element[col.key] | timeAgo }}</span>
                             <span *ngIf="col.key=='options'">
                                 <button class="btn btn-danger btn-circle btn-sm m-1" (click)="delete(element.id)"><i class="fa fa-trash"></i></button>
                                 <button class="btn btn-primary btn-circle btn-sm m-1" (click)="edit(element.id)"><i class="fa fa-edit"></i></button>
