animated progress bar working

--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -56,5 +56,22 @@
         Styling for the donut chart can be found in the <code>/js/demo/chart-pie-demo.js</code> file.
       </div>
     </div>
+
+    <div class="card shadow mb-4">
+      <!-- Card Header - Dropdown -->
+      <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Progress Bar</h6>
+      </div>
+      <!-- Card Body -->
+      <div class="card-body">
+        <app-progress-bar></app-progress-bar>
+        <hr>
+        Styling for the donut chart can be found in the <code>/js/demo/chart-pie-demo.js</code> file.
+      </div>
+    </div>
   </div>
+
+
+
+
 </div>
