--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,16 +1,11 @@
 <!-- Page Wrapper -->
 <div id="wrapper">
-    <app-sidebar
-    #sidebar
-    ></app-sidebar>
+    <app-sidebar #sidebar></app-sidebar>
     <div id="content-wrapper" class="d-flex flex-column">
         <div id="content">
-            <app-topbar
-            (sideBar)="toggleSideBar()"
-            ></app-topbar>
+            <app-topbar (sideBar)="toggleSideBar()"></app-topbar>
             <!-- Begin Page Content -->
         <div class="container-fluid">
-
             <router-outlet></router-outlet>
   
           </div>
