--- a/src/app/components/public/recover/recover.component.html
+++ b/src/app/components/public/recover/recover.component.html
@@ -15,12 +15,14 @@
                   <div class="text-center">
                     <h1 class="h4 text-gray-900 mb-2">¿Olvidate Tu Contraseña?</h1>
                     <p class="mb-4">¡Suele Pasar! Escribe tu correo y te enviaremos un enlace para recuperarla</p>
+                    <div class="alert alert-success" *ngIf="successMessage">{{successMessage}}</div>
+                    <div class="alert alert-danger" *ngIf="failMessage">{{failMessage}}</div>
                   </div>
-                  <form class="user">
+                  <form class="user" (submit)="onSubmit()">
                     <div class="form-group">
-                      <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Ingresa Tu Dirección de Correo...">
+                      <input type="email" class="form-control form-control-user" name="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Ingresa Tu Dirección de Correo..." [(ngModel)]="correo">
                     </div>
-                    <button class="btn btn-primary btn-user btn-block">
+                    <button type="submit" class="btn btn-primary btn-user btn-block">
                       Reset Password
                     </button>
                   </form>
