--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -10,27 +10,32 @@
               <div class="text-center">
                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
               </div>
-              <form class="user">
+              <form class="user" (submit)="register()">
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="text" name="nombres" class="form-control form-control-user" id="exampleFirstName" placeholder="Nommbre" [(ngModel)]="usuario.nombre">
+                    <input type="text" #nombre name="nombres" class="form-control form-control-user" id="exampleFirstName" placeholder="Nommbre" [(ngModel)]="usuario.nombre" required>
+                    <span class="text text-danger" *ngIf="nombreMessage&&!nombre.value">{{nombreMessage}}</span>
                   </div>
                   <div class="col-sm-6">
-                    <input type="text" name="apellidos" class="form-control form-control-user" id="exampleLastName" placeholder="Apellidos" [(ngModel)]="usuario.apellido">
+                    <input type="text" #apellido name="apellidos" class="form-control form-control-user" id="exampleLastName" placeholder="Apellidos" [(ngModel)]="usuario.apellido" required>
+                    <span class="text text-danger" *ngIf="apellidoMessage&&!apellido.value">{{apellidoMessage}}</span>
                   </div>
                 </div>
                 <div class="form-group">
-                  <input type="email" name="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Correo" [(ngModel)]="usuario.email">
+                  <input type="email" #email name="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Correo" [(ngModel)]="usuario.correo" required (keyup)="validateEmail(email.value)">
+                  <span *ngIf="mailMessage" class="text text-danger">{{mailMessage}}</span>
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="password" name="pass1" class="form-control form-control-user" id="exampleInputPassword" placeholder="Contraseña" [(ngModel)]="usuario.password">
+                    <input type="password" #pass1 name="pass1" class="form-control form-control-user" id="exampleInputPassword" placeholder="Contraseña" [(ngModel)]="usuario.password">
+                    <span *ngIf="passMessage&&!pass1.value" class="text text-danger">{{passMessage}}</span>
                   </div>
                   <div class="col-sm-6">
-                    <input type="password" name="pass2" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repite la Contraseña">
+                    <input type="password" #pass2 name="pass2" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repite la Contraseña" (keyup)="validatePass(pass1.value, pass2.value)">
+                    <span *ngIf="passMessage" class="text text-danger">Las claves no coinciden</span>
                   </div>
                 </div>
-                <button class="btn btn-primary btn-user btn-block" (click)="register()">
+                <button class="btn btn-primary btn-user btn-block">
                   Registrar Cuenta
                 </button>
                 <hr>
