--- a/src/app/components/public/recover/recover.component.html
+++ b/src/app/components/public/recover/recover.component.html
@@ -20,7 +20,7 @@
                   </div>
                   <form class="user" (submit)="onSubmit()">
                     <div class="form-group">
-                      <input type="email" class="form-control form-control-user" name="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Ingresa Tu Dirección de Correo..." [(ngModel)]="correo">
+                      <input type="email" class="form-control form-control-user" name="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Ingresa Tu Dirección de Correo..." [(ngModel)]="usuario.correo">
                     </div>
                     <button type="submit" class="btn btn-primary btn-user btn-block">
                       Reset Password
