--- a/src/app/components/common/user-info/user-info.component.html
+++ b/src/app/components/common/user-info/user-info.component.html
@@ -2,7 +2,7 @@
 <li class="nav-item dropdown no-arrow">
     <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <span class="mr-2 d-none d-lg-inline text-gray-600 small">Daniel Boggiano</span>
-      <img class="img-profile rounded-circle" src="http://138.197.196.196/api/imagenes/11.jpg">
+      <img class="img-profile rounded-circle" src="http://picsum.photos/25/25">
     </a>
     <!-- Dropdown - User Information -->
     <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
