--- a/src/app/components/datatable/datatable.component.html
+++ b/src/app/components/datatable/datatable.component.html
@@ -1,22 +1,17 @@
-<h1 class="h3 mb-2 text-gray-800">{{pageTitle}}</h1>
-<p class="mb-4">{{pageDescription}}</p>
-
 <!-- DataTales Example -->
 <div class="card shadow mb-4">
 
     <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">{{cardTitle}}
-            <button class="btn btn-primary mx-2 float-right"><i class="fa fa-plus"></i><span class="d-none d-md-inline"> Agregar Usuario</span></button>
-        </h6>
+        <h6 class="m-0 font-weight-bold text-primary">{{cardTitle}}</h6>
     </div>
 
     <div class="card-body">
 
         <div class="card-title">
             <!-- SEARCH BUTTON -->
-            <form class=" d-sm-inline-block form-inline mr-auto my-2 my-md-0 mw-100 navbar-search" (submit)="loadData()">
+            <form class=" d-sm-inline-block form-inline mr-auto my-2 my-md-0 mw-100 navbar-search" (submit)="searchData()" *ngIf="SearchForm">
                 <div class="input-group">
-                <input type="text" class="form-control bg-light border-0 small" placeholder="Filter..." aria-label="Search" aria-describedby="basic-addon2" name="filterValue" [(ngModel)]="filterValue">
+                <input type="text" class="form-control bg-light border-0 small" placeholder="Filtrar..." aria-label="Search" aria-describedby="basic-addon2" name="filterValue" [(ngModel)]="filterValue">
                 <div class="input-group-append">
                     <button class="btn btn-primary" type="submit">
                     <i class="fas fa-search fa-sm"></i><span class="d-none d-md-inlie"> Search</span>
@@ -24,27 +19,59 @@
                 </div>
                 </div>
             </form>            
-            <app-filter-columns [columns]="tableColumns" (loadColumns)="loadColumns($event)"></app-filter-columns>
-            <app-reports *ngIf="dataSource" [columns]="tableColumns" [data]="csvData"></app-reports>
+            <!-- FILTROS DE COLUMNAS -->
+            <app-filter-columns 
+            [columns]="tableColumns" 
+            (loadColumns)="loadColumns($event)" 
+            *ngIf="FilterColumns">
+            </app-filter-columns>
+            <!-- DESCARGAR REPORTE -->
+            <app-reports 
+            *ngIf="dataSource && DownloadReport" 
+            [columns]="tableColumns" 
+            [data]="csvData">
+        </app-reports>
         </div>
 
         <div class="d-none d-sm-block" style="max-height: 500px; overflow-y: scroll;">
             <table mat-table [dataSource]="dataSource" matSort class="w-100 table" (matSortChange)="sortData($event)">
                 <div *ngFor="let col of tableColumns">
                     <ng-container matColumnDef="{{col.id}}">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text text-primary p-2" [hidden]="!col.visible"><h6>{{col.title}}</h6></th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text text-primary p-2 bg-light" [hidden]="!col.visible"><h6>{{col.title}}</h6></th>
                         <td mat-cell *matCellDef="let element" class="p-2" [hidden]="!col.visible">
                             <span *ngIf="['options','createdAt','updatedAt','deletedAt'].indexOf(col.key) == -1">{{ element[col.key] }}</span>
                             <span *ngIf="['options','createdAt','updatedAt','deletedAt'].indexOf(col.key) > -1">{{ element[col.key] }}</span>
                             <span *ngIf="col.key=='options'">
-                                <button class="btn btn-danger btn-circle btn-sm m-1" (click)="delete(element.id)"><i class="fa fa-trash"></i></button>
-                                <button class="btn btn-primary btn-circle btn-sm m-1" (click)="edit(element.id)"><i class="fa fa-edit"></i></button>
+                                <button 
+                                *ngIf="col.options.delete"
+                                class="btn btn-danger btn-circle btn-sm m-1" 
+                                (click)="delete(element.id)"
+                                title="Borrar">
+                                <i class="fa fa-trash"></i></button>
+                                <button 
+                                *ngIf="col.options.edit"
+                                class="btn btn-primary btn-circle btn-sm m-1" 
+                                (click)="edit(element.id)"
+                                title="Editar">
+                                <i class="fa fa-edit"></i></button>
+                                <button 
+                                *ngIf="col.options.select"
+                                class="btn btn-success btn-circle btn-sm m-1" 
+                                (click)="select(element)"
+                                title="Seleccionar">
+                                <i class="fa fa-check"></i></button>
+                                <button 
+                                *ngIf="col.options.unselect"
+                                class="btn btn-secondary btn-circle btn-sm m-1" 
+                                (click)="select(element)"
+                                title="Deseleccionar">
+                                <i class="fa fa-times"></i></button>
                             </span>
                         </td>
                     </ng-container>
                 </div>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'table-info':selectedRows.indexOf(row.id)>-1}"></tr>
             </table>
         </div>
 
@@ -54,18 +81,28 @@
                 <mat-expansion-panel *ngFor="let data of dataSource.data">
                   <mat-expansion-panel-header>
                     <mat-panel-title>
-                      {{data.nombre}}
+                      <strong>
+                          {{data[tableColumns[1].key]}}
+                      </strong>
                     </mat-panel-title>
                     <mat-panel-description>
-                      {{data.apellido}}
+                        {{data[tableColumns[2].key]}}
                     </mat-panel-description>
                   </mat-expansion-panel-header>
-                    <p>correo: {{data.correo}}</p>
-                    <hr>
-                    <p>creado: {{data.createdAt}}</p>
-                    <hr>
+                  <span *ngFor="let column of tableColumns">
+                      <span *ngIf="column.id!=0">
+                          <p><b>{{column.title}}:</b> {{data[column.key]}}</p>
+                          <!-- <hr> -->
+                      </span>
+                  </span>
                     <button class="btn btn-danger btn-sm m-1" (click)="delete(data.id)"><i class="fa fa-trash"></i> Delete</button>
-                    <button class="btn btn-primary btn-sm m-1" (click)="edit(data.id)"><i class="fa fa-edit"></i> Edit</button>
+                    <button class="btn btn-primary btn-sm m-1" (click)="edit(data.id)"><i class="fa fa-edit"></i> Editar</button>
+                    <button
+                        class="btn btn-success btn-sm m-1"
+                        (click)="select(data.id)"
+                    ><i class="fa fa-check"></i> Ver</button>
+                    <button
+                    class="btn btn-secondary btn-sm m-1" (click)="edit(data.id)"><i class="fa fa-times"></i> Unselect</button>
                 </mat-expansion-panel>
               </mat-accordion>
         </div>
@@ -73,11 +110,12 @@
 
     <div class="card-footer">
         <app-paginator
+        *ngIf="Pagination"
         [pageSize]="pageSize"
         [totalRows]="totalRows"
         [pageSizeOptions]="[10,20,50,100]"
         (loadSize)="loadSize($event)"
-        (loadData)="loadData($event)"
+        (loadData)="loadPage($event)"
         ></app-paginator>
     </div>
 
