--- a/src/app/pages/cuentas/cuentas.component.html
+++ b/src/app/pages/cuentas/cuentas.component.html
@@ -1,3 +1,18 @@
+<!-- Page Heading -->
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+  <h1 class="h3 mb-4 text-gray-800">{{title}}</h1>
+  <a [routerLink]="" class="btn btn-primary btn-icon-split">
+      <span class="icon text-white-50">
+        <i class="fas fa-plus-square" *ngIf="!hide"></i>
+        <i class="fas fa-list" *ngIf="hide"></i>
+      </span>
+      <span class="text" (click)="hide=!hide">
+          <span *ngIf="!hide">Nueva Cuenta</span>
+          <span *ngIf="hide">Ver Lista</span>
+      </span>
+  </a>
+</div>
+
 <!-- Illustrations -->
 <div class="card shadow mb-4">
     <div class="card-header py-3">
