--- a/src/app/pages/cuentas/cuentas.component.html
+++ b/src/app/pages/cuentas/cuentas.component.html
@@ -1,45 +1,100 @@
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
   <h1 class="h3 mb-4 text-gray-800">{{title}}</h1>
-  <a [routerLink]="" class="btn btn-primary btn-icon-split">
-      <span class="icon text-white-50">
-        <i class="fas fa-plus-square" *ngIf="!hide"></i>
-        <i class="fas fa-list" *ngIf="hide"></i>
-      </span>
-      <span class="text" (click)="hide=!hide">
-          <span *ngIf="!hide">Nueva Cuenta</span>
-          <span *ngIf="hide">Ver Lista</span>
-      </span>
-  </a>
 </div>
 
 <!-- Illustrations -->
-<div class="card shadow mb-4">
-    <div class="card-header py-3">
-      <h6 class="m-0 font-weight-bold text-primary">{{$empresa.nombre}}</h6>
-    </div>
-    <div class="card-body">
+<div class="card shadow mb-4" *ngIf="!edit">
+  <div class="card-header py-3">
+    <h6 class="m-0 font-weight-bold text-primary">{{$empresa.nombre}}</h6>
+  </div>
+  <div class="card-body">
+    <div *ngIf="!edit">
       <div class="text-center">
-        <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src="/assets/img/undraw_online_ad_re_ol62.png" alt="">
+        <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" src="{{$empresa.imagen || '/assets/img/undraw_online_ad_re_ol62.png'}}" alt="" height="150">
       </div>
       <p>{{$empresa.notas}}</p>
-      <a target="_blank" rel="nofollow" href="https://undraw.co/">Browse Illustrations on unDraw &rarr;</a>
+      <!-- <a target="_blank" rel="nofollow" href="https://undraw.co/">Browse Illustrations on unDraw &rarr;</a> -->
     </div>
   </div>
+  <div class="card-footer">
+    <div class="row">
+      <div class="col" *ngIf="!edit">
+        <a [routerLink]="" class="btn btn-primary btn-icon-split">
+            <span class="icon text-white-50">
+              <i class="fas fa-plus-square" *ngIf="!hide"></i>
+              <i class="fas fa-list" *ngIf="hide"></i>
+            </span>
+            <span class="text" (click)="hide=!hide">
+                <span *ngIf="!hide">Nueva</span>
+                <span *ngIf="hide">Ver Lista</span>
+            </span>
+        </a>
 
-<app-datacards
-[tableColumns]="tableColumns"
-[dataSource]="dataSource"
-[csvData]="csvData"
-[cardTitle]="cardTitle"
-[pageSize]="pageSize"
-[totalRows]="totalRows"
-[filterValue]="filterValue"
-[field]="field"
-[order]="order"
-[cardType]="cardType"
-(getData)="loadData($event)"
-(deleteData)="delete($event)"
-(updateData)="update($event)"
-(selectData)="select($event)"
-></app-datacards>
+      </div>
+      <div class="col text-right">
+        <div class="dropdown mb-4">
+          <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Acciones
+          </button>
+          <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownMenuButton">
+            <button class="dropdown-item mb-2" (click)="editar()"><i class="fa fa-edit"></i> Editar Empresa</button>
+            <button class="dropdown-item mb-2" (click)="deleteEmpresa()"><i class="fa fa-trash"></i> Borrar Empresa</button>
+            <button class="dropdown-item mb-2" (click)="invitar=!invitar"><i class="fa fa-user"></i> Invitar un usuario</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<ng-container *ngIf="edit">
+  <app-forms
+  [myForm]="myEmpresa"
+  [myFormFields]="myEmpresaFields"
+  [cardTitle]="editTitle"
+  [buttonText]="'Actualizar'"
+  (onCancel)="edit=!edit"
+  (onSubmit)="updateEmpresa($event)"
+  ></app-forms>
+</ng-container>
+
+<ng-container *ngIf="invitar">
+  <app-forms
+  [myForm]="myUsuario"
+  [myFormFields]="myUsuarioFields"
+  [buttonText]="'Invitar'"
+  [cardTitle]="'Invitar un usuario'"
+  [cardDescription]="usuarioCardDescription"
+  (onSubmit)="invitarUsuario($event)"
+  (onCancel)="invitar=!invitar"
+  ></app-forms>
+</ng-container>
+
+<ng-container *ngIf="!hide">
+  <app-datacards
+  [tableColumns]="tableColumns"
+  [dataSource]="dataSource"
+  [csvData]="csvData"
+  [cardTitle]="cardTitle"
+  [pageSize]="pageSize"
+  [totalRows]="totalRows"
+  [filterValue]="filterValue"
+  [field]="field"
+  [order]="order"
+  [cardType]="cardType"
+  (getData)="loadData($event)"
+  (deleteData)="delete($event)"
+  (selectData)="select($event)"
+  ></app-datacards>
+</ng-container>
+
+<ng-container *ngIf="hide">
+  <app-forms
+  [myForm]="myForm"
+  [myFormFields]="myFormFields"
+  [cardTitle]="formsTitle"
+  (onCancel)="hide=!hide"
+  (onSubmit)="create($event)"
+  ></app-forms>
+</ng-container>
