--- a/src/app/pages/registros/registros.component.html
+++ b/src/app/pages/registros/registros.component.html
@@ -1,17 +1,110 @@
+<!-- Page Heading -->
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-4 text-gray-800">{{title}}</h1>
+  </div>
+  
+  <!-- Illustrations -->
+  <div class="card shadow mb-4" *ngIf="!edit">
+    <div class="card-header py-3">
+      <h6 class="m-0 font-weight-bold text-primary">{{$cuenta.nombre}}</h6>
+    </div>
+    <div class="card-body">
+      <div *ngIf="!edit">
+        <div class="text-center">
+          <img class="img-thumbnail px-3 px-sm-4 mt-3 mb-4" src="{{$cuenta.imagen || '/assets/img/undraw_online_ad_re_ol62.png'}}" alt="" height="150">
+        </div>
+        <p>{{$cuenta.notas}}</p>
+        <!-- <a target="_blank" rel="nofollow" href="https://undraw.co/">Browse Illustrations on unDraw &rarr;</a> -->
+      </div>
+    </div>
+    <div class="card-footer">
+      <div class="row">
+        <div class="col" *ngIf="!edit">
+          <a [routerLink]="" class="btn btn-success btn-icon-split">
+              <span class="icon text-white-50">
+                <i class="fas fa-plus-square" *ngIf="!hide"></i>
+                <i class="fas fa-list" *ngIf="hide"></i>
+              </span>
+              <span class="text" (click)="hide=!hide">
+                  <span *ngIf="!hide">Nuevo</span>
+                  <span *ngIf="hide">Ver Registros</span>
+              </span>
+          </a>
+  
+        </div>
+        <div class="col text-right">
+          <div class="dropdown mb-4">
+            <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Acciones
+            </button>
+            <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownMenuButton">
+              <button class="dropdown-item mb-2" (click)="editar()"><i class="fa fa-edit"></i> Editar Cuenta</button>
+              <button class="dropdown-item mb-2" (click)="deleteCuenta()"><i class="fa fa-trash"></i> Borrar Cuenta</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+<ng-container *ngIf="edit">
+    <app-forms
+    [myForm]="myCuenta"
+    [myFormFields]="myCuentaFields"
+    [cardTitle]="'Editar'"
+    [buttonText]="'Actualizar'"
+    (onCancel)="edit=!edit"
+    (onSubmit)="updateCuenta($event)"
+    ></app-forms>
+  </ng-container>
+    
+  <ng-container *ngIf="!hide&&!categoriasShow&&!subcategoriasShow">
+    <app-datacards
+    [tableColumns]="tableColumns"
+    [dataSource]="dataSource"
+    [csvData]="csvData"
+    [cardTitle]="cardTitle"
+    [pageSize]="pageSize"
+    [totalRows]="totalRows"
+    [filterValue]="filterValue"
+    [field]="field"
+    [order]="order"
+    [cardType]="cardType"
+    (getData)="loadData($event)"
+    (deleteData)="delete($event)"
+    (selectData)="select($event)"
+    ></app-datacards>
+  </ng-container>
+  
+  <ng-container *ngIf="hide">
+    <app-forms
+    [myForm]="myForm"
+    [myFormFields]="myFormFields"
+    [cardTitle]="'Agregar Nuevo Registro'"
+    (onCancel)="hide=!hide"
+    (onSubmit)="create($event)"
+    (onInputChange)="inputChange($event)"
+    ></app-forms>
+  </ng-container>
 
-<app-datacards
-[tableColumns]="tableColumns"
-[dataSource]="dataSource"
-[csvData]="csvData"
-[cardTitle]="cardTitle"
-[pageSize]="pageSize"
-[totalRows]="totalRows"
-[filterValue]="filterValue"
-[field]="field"
-[order]="order"
-[cardType]="cardType"
-(getData)="loadData($event)"
-(deleteData)="delete($event)"
-(updateData)="update($event)"
-(selectData)="select($event)"
-></app-datacards>
+  <ng-container *ngIf="categoriasShow">
+    <app-forms
+    [myForm]="myCategoria"
+    [myFormFields]="myCategoriaFields"
+    [cardTitle]="'Agregar Nueva Categoría'"
+    [buttonText]="'Agregar'"
+    (onCancel)="hide=!hide;categoriasShow=!categoriasShow"
+    (onSubmit)="selectCategoria($event)"
+    ></app-forms>
+  </ng-container>
+
+  <ng-container *ngIf="subcategoriasShow">
+    <app-forms
+    [myForm]="mySubcategoria"
+    [myFormFields]="mySubcategoriaFields"
+    [cardTitle]="'Agregar Nueva Subcategoría'"
+    [buttonText]="'Agregar'"
+    (onCancel)="hide=!hide;subcategoriasShow=!subcategoriasShow"
+    (onSubmit)="selectSubcategoria($event)"
+    ></app-forms>
+  </ng-container>
